# airflow-provider-aliyun-rocketmq

./: .coveragerc  .travis.yml  Makefile  README.md  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: release_to_pypi.yml
aliyun_rocketmq/: __init__.py
aliyun_rocketmq_provider/: __init__.py
aliyun_rocketmq_provider/hooks/: aliyun_rocketmq_hook.py
tests/hooks/: test_aliyun_rocketmq_hook.py  test_sample_hook.py
