[metadata]
name = apache-airflow-providers-aliyun-rocketmq
version = 0.0.9
description = Airflow x Aliyun RocketMQ
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

author = Ed__xu__Ed
author_email = m.tofu@qq.com
url = https://github.com/Ed-XCF/apache-airflow-providers-aliyun-rocketmq
project_urls =
    Bug Tracker = https://github.com/Ed-XCF/apache-airflow-providers-aliyun-rocketmq/issues

[options]
packages = find:
python_requires = >=3.7
install_requires =
    mq-http-sdk >= 1.0.3
    apache-airflow >= 2.0

[options.entry_points]
# the function get_provider_info is defined in myproviderpackage.somemodule
apache_airflow_provider=
  provider_info=aliyun_rocketmq_provider.__init__:get_provider_info
